--- a/components/home/leaderboard.module.scss
+++ b/components/home/leaderboard.module.scss
@@ -4,14 +4,27 @@
   margin: $container-margin;
   width: $container-width;
   font-family: $primary-font;
+  position: relative;
 
   h1 {
     font-size: $medium-heading;
     text-transform: uppercase;
     margin: 50px 0;
+    display: flex;
+    gap: 20px;
+
+    svg {
+      width: 50px;
+      height: 50px;
+
+      path {
+        fill: white;
+      }
+    }
   }
 
   .leaderboardTabsContainer {
+    filter: blur(10px);
 
     .tabs {
       border-bottom: 1px solid $light-gray;
