--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -4,14 +4,26 @@
   margin: $container-margin;
   width: $container-width;
   font-family: $primary-font;
+  position: relative;
 
   h1 {
     font-size: $medium-heading;
     text-transform: uppercase;
     margin: 50px 0;
+    display: flex;
+    gap: 20px;
+    svg {
+      width: 50px;
+      height: 50px;
+      path {
+        fill: white;
+      }
+    }
   }
 
   .tournamentCardContainer {
+    filter: blur(10px);
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 50px
