--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -50,68 +50,69 @@
     }
 
     .content {
-      .infrastructure {
-        min-height: 900px;
-        padding: 100px;
+      //.infrastructure {
+      //  min-height: 900px;
+      //  padding: 100px;
+      //
+      //  .heading {
+      //    margin-bottom: 100px !important;
+      //
+      //    h1 {
+      //      margin: 0;
+      //      font-size: $medium-heading;
+      //      text-transform: uppercase;
+      //    }
+      //  }
+      //
+      //  //.body {
+      //  //  display: grid;
+      //  //  justify-items: center;
+      //  //  grid-template-columns: repeat(5, 1fr);
+      //  //
+      //  //  .icon {
+      //  //    text-align: center;
+      //  //    padding: 20px 0;
+      //  //
+      //  //    svg {
+      //  //      width: 100px;
+      //  //      height: 80px;
+      //  //    }
+      //  //
+      //  //    h3 {
+      //  //      text-transform: uppercase;
+      //  //    }
+      //  //  }
+      //  //
+      //  //  .icon:nth-of-type(1) {
+      //  //    grid-column-start: 1;
+      //  //    grid-column-end: 3;
+      //  //  }
+      //  //
+      //  //  .icon:nth-of-type(2) {
+      //  //    grid-column-start: 4;
+      //  //    grid-column-end: 6;
+      //  //  }
+      //  //
+      //  //  .icon:nth-of-type(3) {
+      //  //    grid-column-start: 1;
+      //  //    grid-column-end: 6;
+      //  //  }
+      //  //
+      //  //
+      //  //  .icon:nth-of-type(4) {
+      //  //    grid-column-start: 1;
+      //  //    grid-column-end: 3;
+      //  //  }
+      //  //
+      //  //  .icon:nth-of-type(5) {
+      //  //    grid-column-start: 4;
+      //  //    grid-column-end: 6;
+      //  //  }
+      //  //}
+      //}
 
-        .heading {
-          margin-bottom: 100px !important;
 
-          h1 {
-            margin: 0;
-            font-size: $medium-heading;
-            text-transform: uppercase;
-          }
-        }
-
-        .body {
-          display: grid;
-          justify-items: center;
-          grid-template-columns: repeat(5, 1fr);
-
-          .icon {
-            text-align: center;
-            padding: 20px 0;
-
-            svg {
-              width: 100px;
-              height: 80px;
-            }
-
-            h3 {
-              text-transform: uppercase;
-            }
-          }
-
-          .icon:nth-of-type(1) {
-            grid-column-start: 1;
-            grid-column-end: 3;
-          }
-
-          .icon:nth-of-type(2) {
-            grid-column-start: 4;
-            grid-column-end: 6;
-          }
-
-          .icon:nth-of-type(3) {
-            grid-column-start: 1;
-            grid-column-end: 6;
-          }
-
-
-          .icon:nth-of-type(4) {
-            grid-column-start: 1;
-            grid-column-end: 3;
-          }
-
-          .icon:nth-of-type(5) {
-            grid-column-start: 4;
-            grid-column-end: 6;
-          }
-        }
-      }
-
-      .challenges, .skills, .visibility, .earnings {
+      .infrastructure,.challenges, .skills, .visibility, .earnings {
         min-height: 900px;
         padding: 100px;
 
@@ -132,16 +133,17 @@
         .body {
           padding: 50px;
           display: grid;
-          justify-items: start;
+          justify-items: center;
           grid-template-columns: repeat(3, 1fr);
+
 
           .icon {
             text-align: center;
             padding: 20px 0;
 
             svg {
-              width: 100px;
-              height: 80px;
+              width: 75px;
+              height: 75px;
             }
 
             h3 {
