faq.module.scss edited online with Bitbucket Uncommentary FAQ

--- a/components/home/faq.module.scss
+++ b/components/home/faq.module.scss
@@ -20,10 +20,10 @@
       transition: $transition;
 
 
-      //&:hover > .listItemContent {
-      //  //display: block;
-      //  transition: $transition;
-      //}
+      &:hover > .listItemContent {
+        display: block;
+        transition: $transition;
+      }
 
       &:hover > .listItemHeader img {
         rotate: 180deg;
