--- a/components/home/header.module.scss
+++ b/components/home/header.module.scss
@@ -95,6 +95,12 @@
     margin: $container-margin;
     width: $container-width;
 
+    .filter {
+      opacity: 0.7;
+      width: 100%;
+      rotate: 0deg;
+    }
+
     .content {
       width: 95%;
       padding: 15px;
