--- a/components/landingPage/purpose.module.scss
+++ b/components/landingPage/purpose.module.scss
@@ -38,6 +38,7 @@
     justify-content: center;
     text-align: center;
     padding: 0 10px;
+    margin-top: 30px !important;
 
     h1 {
       font-size: 36px;
