--- a/components/header/logo/logo.module.scss
+++ b/components/header/logo/logo.module.scss
@@ -5,6 +5,12 @@
 }
 
 
+@media screen and (max-width: 1280px) {
+  .logo img {
+    width: 230px;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .logo img {
     width: 150px;
