--- a/components/header/navigation/navigation.module.scss
+++ b/components/header/navigation/navigation.module.scss
@@ -48,6 +48,70 @@
 }
 
 
+
+
+
+.mobileNavigation {
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: $black;
+  z-index: 20;
+
+  .closeNavigation {
+    text-align: right;
+
+    svg {
+      margin: 10px;
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: block;
+      color: white;
+      margin: 0 15px;
+      padding: 20px 5px;
+      font-size: $medium-paragraph;
+      text-align: left;
+      vertical-align: middle;
+      text-transform: uppercase;
+      font-family: $primary-font;
+      border-bottom: 2px solid #0F1214;
+      transition: $transition;
+
+      sup {
+        font-size: 10px;
+        position: absolute;
+      }
+
+    }
+
+    li:hover {
+      cursor: pointer;
+      border-bottom: 2px solid $primary-color;
+      transition: $transition;
+    }
+
+    .active {
+      font-weight: 600;
+      border-bottom: 2px solid $primary-color;
+      transition: $transition;
+    }
+  }
+}
+
+
+
+
 @media screen and (max-width: 1280px) {
   .navigation {
     ul {
@@ -59,28 +123,10 @@
     }
   }
 }
-
 @media screen and (max-width: 768px) {
   .navigation {
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    background-color: $black;
-    z-index: 4;
     display: none;
-
-    .closeNavigation {
-      display: block;
-    }
-
-    ul {
-      text-align: center;
-
-      li {
-        display: block;
-      }
-    }
   }
 }
+
+
