--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -21,13 +21,13 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       justify-items: center;
-      margin-top: 25px;
+      margin-top: 20px;
 
       .item {
         text-align: center;
         cursor: pointer;
         border-bottom: 5px solid $gray;
-        padding-bottom: 20px;
+        padding-bottom: 5px;
         width: 100%;
 
         &:hover, .active {
@@ -42,8 +42,7 @@
 
         svg {
           width: 55px;
-          height: 55px;
-          margin-bottom: 10px;
+          height: 55px;          
         }
 
       }
@@ -117,7 +116,7 @@
         padding: 70px;
 
         .heading {
-          margin-bottom: 60px !important;
+          margin-bottom: 10px !important;
 
           h1 {
             font-size: $medium-heading;
@@ -131,7 +130,7 @@
         }
 
         .body {
-          padding: 25px;
+          padding: 10px;
           display: grid;
           justify-items: center;
           grid-template-columns: repeat(3, 1fr);
@@ -249,6 +248,9 @@
           h3 {
             font-size: 12px;
           }
+          h4 {
+            font-size: 12px;
+          }
 
           svg {
             width: 30px;
@@ -273,7 +275,7 @@
             margin-bottom: 20px !important;
 
             h1 {
-              font-size: $large-paragraph;
+              font-size: 15px;
             }
 
             h3 {
@@ -290,11 +292,15 @@
               padding: 0;
 
               svg {
-                width: 50px;
+                width: 40px;
                 height: 40px;
               }
 
               h3 {
+                font-size: 10px;
+              }
+
+              h4 {
                 font-size: 10px;
               }
 
