--- a/components/home/header.module.scss
+++ b/components/home/header.module.scss
@@ -30,10 +30,14 @@
 
     h1 {
       margin: 0;
+      color: $white;
+      -webkit-text-fill-color: $white;
       font-size: $large-heading;
     }
 
     p {
+      color: $white;
+      -webkit-text-fill-color: $white;
       font-size: $large-paragraph;
     }
   }
