--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,7 @@ a {
     color-scheme: dark;
   }
   body {
-    -webkit-text-fill-color: rgb(255, 255, 255);
+    /*-webkit-text-fill-color: rgb(255, 255, 255);*/
     color: #ffffff;
     background: black;
   }
