--- a/components/home/faq.module.scss
+++ b/components/home/faq.module.scss
@@ -87,3 +87,29 @@
   }
 
 }
+
+
+@media screen and (max-width: 320px) {
+  .container {
+    margin: $container-margin;
+    width: $container-width;
+    h1 {
+      font-size: $small-heading;
+      margin-bottom: 15px;
+    }
+
+    .faqsListItems {
+      .listItem {
+        margin-bottom: 10px;
+
+        .listItemHeader {
+          font-size: 12px;
+        }
+        .listItemContent {
+          font-size: 11px;
+        }
+      }
+    }
+  }
+
+}
