--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -337,3 +337,96 @@
     }
   }
 }
+
+
+@media screen and (max-width: 320px) {
+  .container {
+    height: 650px;
+
+    .heading {
+      h1 {
+        font-size: $small-heading;
+        color: $white;
+        -webkit-text-fill-color: $white;
+      }
+      p {
+        font-size: $small-paragraph;
+      }
+    }
+
+    .tabs {
+      .header {
+        .item {
+          h3 {
+            font-size: 11px;
+          }
+          h4 {
+            font-size: 9px;
+          }
+
+          svg {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+
+      .content {
+        .challenges, .skills, .visibility, .earnings {
+          .heading {
+            p {
+              font-size: 9px;
+            }
+          }
+        }
+
+        .infrastructure, .challenges, .skills, .visibility, .earnings {
+          padding: 20px;
+
+          .heading {
+            margin-bottom: 20px !important;
+
+            h1 {
+              font-size: 13px;
+            }
+
+            h3 {
+              font-size: 11px;
+            }
+            p {
+              font-size: 9px;
+            }
+          }
+
+          .body {
+            padding: 5px;
+            justify-items: center;
+
+
+            .icon {
+              padding: 0;
+
+              svg {
+                width: 40px;
+                height: 40px;
+              }
+
+              h3 {
+                font-size: 10px;
+                color: $white;
+                -webkit-text-fill-color: $white;
+              }
+
+              h4 {
+                font-size: 10px;
+                color: $white;
+                -webkit-text-fill-color: $white;
+              }
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
