--- a/components/landingPage/journey.module.scss
+++ b/components/landingPage/journey.module.scss
@@ -7,16 +7,21 @@
 
   .heading {
     text-align: center;
+
     h1 {
-      font-size: $medium-heading ;
+      font-size: $medium-heading;
       text-transform: uppercase;
       margin: 0;
+      color: $white;
+      -webkit-text-fill-color: $white;
     }
 
     h3 {
       font-weight: 500;
       margin: 5px 0;
       font-size: $small-heading;
+      color: $white;
+      -webkit-text-fill-color: $white;
     }
   }
 
@@ -29,6 +34,8 @@
       h1 {
         font-size: $large-heading;
         margin: 0;
+        color: $white;
+        -webkit-text-fill-color: $white;
       }
     }
 
@@ -111,4 +118,11 @@
     }
   }
 
+}
+
+
+@media screen and (max-width: 320px) {
+  .container {
+    margin: 30px auto;
+  }
 }
