--- a/components/landingPage/purpose.module.scss
+++ b/components/landingPage/purpose.module.scss
@@ -7,7 +7,7 @@
   margin-right: 0 !important;
   background-image: url("/images/purpose-banner.jpg");
   background-size: cover;
-  height: 300px;
+  height: 400px;
   display: flex;
   align-items: center;
   padding: 0 100px;
@@ -40,6 +40,7 @@
     padding: 0 10px;
     margin-top: 30px !important;
 
+
     h1 {
       font-size: 36px;
       margin-bottom: 10px;
@@ -50,6 +51,30 @@
     }
     p {
       font-size: 11px;
+    }
+  }
+
+}
+
+@media screen and (max-width: 320px) {
+
+  .container {
+    justify-content: center;
+    text-align: center;
+    padding: 0 10px;
+    margin-top: 30px !important;
+    background-size: cover;
+    background-position:  760px;
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      font-size: 13px;
+    }
+    p {
+      font-size: 10px;
     }
   }
 
