--- a/components/ui/button/button.module.scss
+++ b/components/ui/button/button.module.scss
@@ -140,3 +140,30 @@
   }
 
 }
+
+@media screen and (max-width: 320px) {
+  .button {
+    height: 30px;
+    width: 120px;
+    font-size: 11px;
+    border-radius: 5px;
+  }
+  .menuIcon {
+    display: block;
+    height: 30px;
+    width: 30px;
+    border-radius: 5px;
+    img {
+      height: 30px;
+      width: 18px;
+    }
+  }
+
+  .buttonOutline {
+    width: 120px;
+    font-size: 12px;
+    padding: 8px 0;
+    font-weight: 700;
+  }
+
+}
