font color fixed

--- a/components/home/faq.module.scss
+++ b/components/home/faq.module.scss
@@ -9,6 +9,8 @@
     font-size: $medium-heading;
     text-transform: uppercase;
     margin: 50px 0;
+    color: $white;
+    -webkit-text-fill-color: $white;
   }
 
   .faqsListItems {
