--- a/components/landingPage/roadmap.module.scss
+++ b/components/landingPage/roadmap.module.scss
@@ -12,6 +12,8 @@
       font-size: $medium-heading;
       margin: $heading-margin;
       text-transform: uppercase;
+      color: $white;
+      -webkit-text-fill-color: $white;
     }
   }
 
