--- a/components/home/leaderboard.module.scss
+++ b/components/home/leaderboard.module.scss
@@ -12,6 +12,8 @@
     margin: 50px 0;
     display: flex;
     gap: 20px;
+    color: $white;
+    -webkit-text-fill-color: $white;
 
     svg {
       width: 50px;
@@ -42,7 +44,8 @@
 
       span:hover, span.active {
         border-bottom: 1px solid $primary-color;
-        color: white;
+        color: $white;
+        -webkit-text-fill-color: $white;
         font-weight: 700;
         transition: $transition;
       }
