--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -12,6 +12,8 @@
     margin: 50px 0;
     display: flex;
     gap: 20px;
+    color: $white;
+    -webkit-text-fill-color: $white;
     svg {
       width: 50px;
       height: 50px;
