--- a/components/landingPage/collaboration.module.scss
+++ b/components/landingPage/collaboration.module.scss
@@ -17,6 +17,8 @@
       font-weight: 100;
       font-size: $small-heading;
       margin: 0;
+      color: $white;
+      -webkit-text-fill-color: $white;
     }
   }
 
@@ -45,6 +47,8 @@
         text-transform: uppercase;
         font-weight: 800;
         margin: 0;
+        color: $white;
+        -webkit-text-fill-color: $white;
       }
     }
 
