--- a/components/landingPage/join.module.scss
+++ b/components/landingPage/join.module.scss
@@ -17,11 +17,15 @@
     font-size: 46px;
     font-weight: 800;
     margin: 0;
+    color: $white;
+    -webkit-text-fill-color: $white;
   }
 
   p {
     font-weight: 200;
     font-size: 15px;
+    color: $white;
+    -webkit-text-fill-color: $white;
   }
 }
 
