--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -248,7 +248,7 @@
 
     .heading {
       h1 {
-        font-size: $medium-heading;
+        font-size: $small-heading;
         color: $white;
         -webkit-text-fill-color: $white;
       }
@@ -293,13 +293,13 @@
             margin-bottom: 20px !important;
 
             h1 {
-              font-size: 15px;
+              font-size: 12px;
               color: $white;
               -webkit-text-fill-color: $white;
             }
 
             h3 {
-              font-size: $medium-paragraph;
+              font-size: $small-paragraph;
               color: $white;
               -webkit-text-fill-color: $white;
             }
@@ -314,8 +314,8 @@
               padding: 0;
 
               svg {
-                width: 40px;
-                height: 40px;
+                width: 35px;
+                height: 35px;
               }
 
               h3 {
@@ -325,7 +325,7 @@
               }
 
               h4 {
-                font-size: 10px;
+                font-size: 08px;
                 color: $white;
                 -webkit-text-fill-color: $white;
               }
