--- a/components/landingPage/journey.module.scss
+++ b/components/landingPage/journey.module.scss
@@ -37,6 +37,10 @@
         color: $white;
         -webkit-text-fill-color: $white;
       }
+      p {
+        color: $white;
+        -webkit-text-fill-color: $white;
+      }
     }
 
     .image img {
