--- a/pages/wallet/create/create-wallet.module.scss
+++ b/pages/wallet/create/create-wallet.module.scss
@@ -14,6 +14,8 @@
       margin-bottom: 20px;
     }
 
+
+
   }
 
   .content {
@@ -27,6 +29,8 @@
       padding: 30px;
       border-radius: 20px;
       font-size: $medium-paragraph;
+      color: $white;
+
     }
 
   }
