--- a/pages/wallet/recover-password/recover-password.module.scss
+++ b/pages/wallet/recover-password/recover-password.module.scss
@@ -17,6 +17,9 @@
     p {
       font-size: $small-paragraph;
       margin: 0;
+      color: $white;
+      -webkit-text-fill-color: $white;
+
     }
   }
 
@@ -32,6 +35,9 @@
       padding: 30px;
       border-radius: 5px;
       font-size: $medium-paragraph;
+      color: $white;
+      -webkit-text-fill-color: $white;
+
     }
 
   }
