--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -42,12 +42,16 @@
           font-size: 24px;
           font-weight: 800;
           margin: 0;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
 
         h4 {
           font-size: 20px;
           font-weight: 800;
-          margin: 05px;
+          margin: 5px;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
 
         svg {
@@ -59,68 +63,6 @@
     }
 
     .content {
-      //.infrastructure {
-      //  min-height: 900px;
-      //  padding: 100px;
-      //
-      //  .heading {
-      //    margin-bottom: 100px !important;
-      //
-      //    h1 {
-      //      margin: 0;
-      //      font-size: $medium-heading;
-      //      text-transform: uppercase;
-      //    }
-      //  }
-      //
-      //  //.body {
-      //  //  display: grid;
-      //  //  justify-items: center;
-      //  //  grid-template-columns: repeat(5, 1fr);
-      //  //
-      //  //  .icon {
-      //  //    text-align: center;
-      //  //    padding: 20px 0;
-      //  //
-      //  //    svg {
-      //  //      width: 100px;
-      //  //      height: 80px;
-      //  //    }
-      //  //
-      //  //    h3 {
-      //  //      text-transform: uppercase;
-      //  //    }
-      //  //  }
-      //  //
-      //  //  .icon:nth-of-type(1) {
-      //  //    grid-column-start: 1;
-      //  //    grid-column-end: 3;
-      //  //  }
-      //  //
-      //  //  .icon:nth-of-type(2) {
-      //  //    grid-column-start: 4;
-      //  //    grid-column-end: 6;
-      //  //  }
-      //  //
-      //  //  .icon:nth-of-type(3) {
-      //  //    grid-column-start: 1;
-      //  //    grid-column-end: 6;
-      //  //  }
-      //  //
-      //  //
-      //  //  .icon:nth-of-type(4) {
-      //  //    grid-column-start: 1;
-      //  //    grid-column-end: 3;
-      //  //  }
-      //  //
-      //  //  .icon:nth-of-type(5) {
-      //  //    grid-column-start: 4;
-      //  //    grid-column-end: 6;
-      //  //  }
-      //  //}
-      //}
-
-
       .infrastructure,.challenges, .skills, .visibility, .earnings {
         min-height: 550px;
         padding: 60px;
@@ -132,10 +74,14 @@
             font-size: $medium-heading;
             margin: 0;
             text-transform: uppercase;
+            color: $white;
+            -webkit-text-fill-color: $white;
           }
 
           h3 {
             font-size: 26px;
+            color: $white;
+            -webkit-text-fill-color: $white;
           }
         }
 
@@ -149,6 +95,8 @@
           .icon {
             text-align: center;
             padding: 05px 0;
+            color: $white;
+            -webkit-text-fill-color: $white;
 
             svg {
               width: 60px;
@@ -157,6 +105,8 @@
 
             h3 {
               text-transform: uppercase;
+              color: $white;
+              -webkit-text-fill-color: $white;
             }
           }
         }
