--- a/components/landingPage/roadmap.module.scss
+++ b/components/landingPage/roadmap.module.scss
@@ -67,6 +67,8 @@
         li {
           list-style: none;
           font-size: 14px;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
       }
 
