--- a/pages/dashboard/overview/dashboard-overview.module.scss
+++ b/pages/dashboard/overview/dashboard-overview.module.scss
@@ -27,6 +27,8 @@
         h1 {
           font-size: $medium-heading;
           text-transform: uppercase;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
       }
 
@@ -61,12 +63,16 @@
               font-weight: 500;
               font-size: $large-paragraph;
               margin: 10px 0;
+              color: $white;
+              -webkit-text-fill-color: $white;
             }
 
             p {
               font-size: $small-paragraph;
               margin: 3px;
               font-weight: 100;
+              color: $white;
+              -webkit-text-fill-color: $white;
             }
 
           }
@@ -77,6 +83,8 @@
             gap: 10px;
             font-size: $small-paragraph;
             margin-bottom: 5px;
+            color: $white;
+            -webkit-text-fill-color: $white;
           }
 
           .ratio {
@@ -84,7 +92,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-
+            color: $white;
             button {
               margin-left: 20px;
               align-self: end;
@@ -155,12 +163,14 @@
               p {
                 font-size: $medium-paragraph;
                 margin: 0;
+
               }
 
               h1 {
                 font-size: $medium-heading;
                 line-height: $medium-heading;
                 margin: -5px;
+
               }
             }
           }
@@ -210,6 +220,7 @@
             .text {
               h1 {
                 font-size: $small-heading;
+
               }
             }
           }
@@ -262,6 +273,7 @@
             background-color: $darker-gray;
             padding: 30px;
 
+
             .heading {
               margin: 10px 0;
               display: flex;
@@ -270,6 +282,8 @@
               h2 {
                 margin: 0;
                 font-size: $large-paragraph;
+                color: $white;
+                -webkit-text-fill-color: $white;
               }
             }
           }
@@ -315,6 +329,8 @@
                   h1 {
                     font-size: $small-paragraph;
                     margin: 10px 0;
+                    color: $white;
+                    -webkit-text-fill-color: $white;
                   }
 
                   hr {
@@ -325,6 +341,7 @@
                     font-size: 10px;
                     margin: 0;
                     font-weight: 500;
+
 
                     span {
                       color: $primary-color;
