--- a/pages/dashboard/tournament/tournament.module.scss
+++ b/pages/dashboard/tournament/tournament.module.scss
@@ -30,11 +30,15 @@
         h4 {
           margin: 0;
           font-size: $small-heading;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
 
         p {
           margin: 5px;
           font-size: $large-paragraph;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
 
         span {
@@ -109,6 +113,8 @@
               h3 {
                 font-weight: 500;
                 margin: 5px;
+                color: $white;
+                -webkit-text-fill-color: $white;
               }
 
               p {
@@ -170,11 +176,15 @@
                   margin: 0;
                   margin-left: -10px !important;
                   font-size: $small-heading;
+                  color: $white;
+                  -webkit-text-fill-color: $white;
                 }
 
                 p {
                   margin: 10px 0;
                   padding: 0 10px;
+                  color: $white;
+                  -webkit-text-fill-color: $white;
                 }
 
                 span {
@@ -206,6 +216,8 @@
 
 
             tbody {
+              color: $white;
+              -webkit-text-fill-color: $white;
               td {
                 padding: 20px;
               }
