--- a/pages/dashboard/your-profile/your-profile.module.scss
+++ b/pages/dashboard/your-profile/your-profile.module.scss
@@ -26,6 +26,8 @@
         h1 {
           font-size: $medium-heading;
           text-transform: uppercase;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
       }
 
@@ -53,6 +55,8 @@
                 margin: 0;
                 font-weight: 500;
                 font-size: $small-paragraph;
+                color: $white;
+                -webkit-text-fill-color: $white;
               }
             }
 
@@ -85,6 +89,8 @@
                 border: 1px solid rgba($color-gray, 0.5);
                 border-radius: 3px;
                 background-color: $gray;
+                color: $white;
+                -webkit-text-fill-color: $white;
               }
 
               label {
@@ -110,6 +116,8 @@
             font-weight: 400;
             margin-bottom: 0;
             text-transform: capitalize;
+            color: $white;
+            -webkit-text-fill-color: $white;
           }
 
           a {
@@ -129,6 +137,8 @@
         .heading {
           font-size: $small-paragraph;
           opacity: 0.8;
+          color: $white;
+          -webkit-text-fill-color: $white;
         }
 
         .gameId {
@@ -145,6 +155,8 @@
           h3 {
             margin: 5px;
             font-weight: 500;
+            color: $white;
+            -webkit-text-fill-color: $white;
           }
         }
       }
