--- a/components/landingPage/join.module.scss
+++ b/components/landingPage/join.module.scss
@@ -7,6 +7,7 @@
   margin-right: 0 !important;
   background-image: url("/images/join-banner.jpg");
   background-size: cover;
+  background-position: left top;
   height: 400px;
   display: flex;
   align-items: center;
@@ -29,12 +30,26 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    background-image: url("/images/join-mobile.jpeg");
+    background-size: cover;
+    background-position: right top;
+    background-repeat: no-repeat;
+  }
+}
+
 @media screen and (max-width: 640px) {
 
   .container {
     justify-content: center;
     text-align: center;
     padding: 0 10px;
+    background-image: url("/images/join-mobile.jpeg");
+    background-size: cover;
+    background-position: right top;
+    background-repeat: no-repeat;
+    height: 300px;
 
     h1 {
       font-size: 36px;
