experiences.module.scss edited online with Bitbucket

--- a/components/landingPage/experiences.module.scss
+++ b/components/landingPage/experiences.module.scss
@@ -202,6 +202,11 @@
         color: $white;
         -webkit-text-fill-color: $white;
       }
+      p {
+        color: $white;
+        -webkit-text-fill-color: $white;        
+        font-size: 12px;
+      }
     }
 
     .tabs {
