Nav links and new sections

--- a/components/home/upcoming.module.scss
+++ b/components/home/upcoming.module.scss
@@ -24,7 +24,7 @@
   }
 
   .tournamentCardContainer {
-    filter: blur(10px);
+    //filter: blur(10px);
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
