--- a/components/home/leaderboard.module.scss
+++ b/components/home/leaderboard.module.scss
@@ -26,7 +26,7 @@
   }
 
   .leaderboardTabsContainer {
-    filter: blur(10px);
+    //filter: blur(10px);
 
     .tabs {
       border-bottom: 1px solid $light-gray;
