--- a/pages/dashboard/overview/redeem-reward.module.scss
+++ b/pages/dashboard/overview/redeem-reward.module.scss
@@ -23,6 +23,25 @@
     text-align: center;
     width: 800px;
 
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      svg {
+        background: $secondary-color;
+        stroke: $black;
+        padding: 3px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+        stroke-width: 2px;
+      }
+      :hover  svg{
+        background: $primary-color;
+      }
+    }
+
     .heading {
 
       p {
@@ -31,7 +50,8 @@
         font-size: $small-paragraph;
 
       }
-      h1{
+
+      h1 {
         color: $white;
         -webkit-text-fill-color: $white;
       }
@@ -140,6 +160,7 @@
 
       .rewards {
         gap: 10px;
+
         .reward {
           padding: 20px 5px;
 
